@@ -54,6 +54,101 @@ function optimizerCostsTestSuite () {
     },
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief test cost of LimitNode
+////////////////////////////////////////////////////////////////////////////////
+
+    testLimitNodeCost : function () {
+      const query = "FOR i IN 1..10000 LIMIT @offset, @limit RETURN i";
+
+      // [ offset, limit, expected number of items ]
+      let tests = [ 
+        [ 0, 0, 0, 10002 ],
+        [ 0, 1, 1, 10003 ],
+        [ 0, 10, 10, 10012 ],
+        [ 0, 100, 100, 10102 ],
+        [ 0, 1000, 1000, 11002 ],
+        [ 0, 9999, 9999, 20001 ],
+        [ 0, 10000, 10000, 20002 ],
+        [ 0, 100000, 10000, 20002 ],
+        [ 0, 1000000, 10000, 20002 ],
+        [ 0, 10000000, 10000, 20002 ],
+        [ 0, 100000000, 10000, 20002 ],
+        [ 1, 0, 0, 10002.000001 ],
+        [ 1, 1, 1, 10003.000001 ],
+        [ 1, 10, 10, 10012.000001 ],
+        [ 1, 100, 100, 10102.000001 ],
+        [ 1, 1000, 1000, 11002.000001 ],
+        [ 1, 9999, 9999, 20001.000001 ],
+        [ 1, 10000, 9999, 20001.000001 ],
+        [ 1, 100000, 9999, 20001.000001 ],
+        [ 1, 1000000000, 9999, 20001.00000 ],
+        [ 10, 0, 0, 10002.00001 ],
+        [ 10, 1, 1, 10003.00001 ],
+        [ 10, 10, 10, 10012.00001 ],
+        [ 10, 100, 100, 10102.00001 ],
+        [ 10, 9999, 9990, 19992.00001 ],
+        [ 10, 10000, 9990, 19992.00001 ],
+        [ 10, 1000000000, 9990, 19992.00001 ],
+        [ 1000, 0, 0, 10002.00100 ],
+        [ 1000, 1, 1, 10003.00100 ],
+        [ 1000, 1000, 1000, 11002.00100 ],
+        [ 1000, 9999, 9000, 19002.00100 ],
+        [ 1000, 10000, 9000, 19002.00100 ],
+        [ 1000, 1000000000, 9000, 19002.00100 ],
+        [ 5000, 0, 0, 10002.00500 ],
+        [ 5000, 1, 1, 10003.00500 ],
+        [ 5000, 1000, 1000, 11002.00500 ],
+        [ 5000, 9999, 5000, 15002.00500 ],
+        [ 5000, 10000, 5000, 15002.00500 ],
+        [ 5000, 1000000000, 5000, 15002.00500 ],
+        [ 9999, 0, 0, 10002.01000 ],
+        [ 9999, 1, 1, 10003.01000 ],
+        [ 9999, 2, 1, 10003.01000 ],
+        [ 9999, 10, 1, 10003.01000 ],
+        [ 9999, 1000, 1, 10003.01000 ],
+        [ 9999, 10000, 1, 10003.01000 ],
+        [ 9999, 1000000, 1, 10003.01000 ],
+        [ 10000, 0, 0, 10002.01000 ],
+        [ 10000, 1, 0, 10002.01000 ],
+        [ 10000, 2, 0, 10002.01000 ],
+        [ 10000, 10, 0, 10002.01000 ],
+        [ 10000, 100, 0, 10002.01000 ],
+        [ 10000, 1000, 0, 10002.01000 ],
+        [ 10000, 10000, 0, 10002.01000 ],
+        [ 10000, 100000, 0, 10002.01000 ],
+        [ 10000, 1000000, 0, 10002.01000 ],
+        [ 10000, 10000000, 0, 10002.01000 ],
+        [ 10000, 10000000000000, 0, 10002.01000 ],
+        [ 10000000, 0, 0, 10002.01000 ],
+        [ 10000000, 1, 0, 10002.01000 ],
+        [ 10000000, 2, 0, 10002.01000 ],
+        [ 10000000, 10, 0, 10002.01000 ],
+        [ 10000000, 100, 0, 10002.01000 ],
+        [ 10000000, 1000, 0, 10002.01000 ],
+        [ 10000000, 10000, 0, 10002.01000 ],
+        [ 10000000, 100000, 0, 10002.01000 ],
+        [ 10000000, 1000000, 0, 10002.01000 ],
+        [ 10000000, 10000000, 0, 10002.01000 ],
+        [ 10000000, 10000000000000, 0, 10002.01000 ],
+        [ 100000000000, 0, 0, 10002.01000 ],
+        [ 100000000000, 10, 0, 10002.01000 ],
+        [ 100000000000, 1000, 0, 10002.01000 ],
+        [ 100000000000, 10000000, 0, 10002.01000 ],
+        [ 100000000000, 10000000000000, 0, 10002.01000 ],
+      ];
+
+      tests.forEach(function(test) {
+        let plan = AQL_EXPLAIN(query, { offset: test[0], limit: test[1] });
+        let node = helper.findExecutionNodes(plan, "LimitNode")[0];
+
+        // number of nodes cannot be estimated properly due to function call
+        assertEqual("LimitNode", node.type);
+        assertEqual(test[2], node.estimatedNrItems, test);
+        assertEqual(test[3].toFixed(5), node.estimatedCost.toFixed(5), test);
+      });
+    },
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief test cost of EnumerateListNode
 ////////////////////////////////////////////////////////////////////////////////
 
